--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,5 +26,35 @@ changeLanguage("cs");
         </strong> such as <a href="https://example.com/">a cool link</a>!
       </Trans>
     </p>
+		<ul id="daily-menu"></ul>
 	</body>
 </html>
+
+<style>
+	.price {color: red; }
+</style>
+
+<script>
+	const ul = document.querySelector('#daily-menu');
+	let dailyMenu = "https://opensheet.elk.sh/1XW32FBLBLWsKdcg6fK6C0PB5-kNJXbGytTWnSNNaSmA/Czech"
+	if (document.documentElement.lang === "en") {
+		dailyMenu = "https://opensheet.elk.sh/1XW32FBLBLWsKdcg6fK6C0PB5-kNJXbGytTWnSNNaSmA/English"
+	}
+
+	await fetch(dailyMenu)
+		.then ((res) => res.json())
+		.then((data) => {
+			data.map(item => {
+				let li = document.createElement("li");
+				let spanName = document.createElement("span");
+				let spanPrice = document.createElement("span");
+				let name = document.createTextNode(item.name);
+				let price = document.createTextNode(item.price);
+				spanName.append(name);
+				spanPrice.append(price);
+				spanPrice.classList.add("price");
+				li.append(spanName, spanPrice);
+				ul.appendChild(li);
+			})
+		})
+</script>
