--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -14,6 +14,7 @@ changeLanguage("en");
 		<meta name="generator" content={Astro.generator} />
 		<title>{t("site.title")}</title>
 		<meta name="description" content={t("site.description")} />
+		<meta name="robots" content="noindex, nofollow" />
     <HeadHrefLangs />
 	</head>
 	<body>
