fix "public" path not being recognized

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -31,8 +31,9 @@ changeLanguage("en");
 	</body>
 </html>
 
-<style>
-	.price {color: red; }
+<style is:inline>
+	#daily-menu li {display:flex; justify-content: space-between;}
+	.price {color: green; font-weight: bold;}
 </style>
 
 <script>
