--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import i18next, { t, changeLanguage } from "i18next";
+import { t } from "i18next";
 //assets
-import logo from '../assets/img/invitaly_logo.png'
+import logo from '../assets/img/branding/invitaly_logo--small.svg'
 ---
 <header class="container">
   <nav class="desktop-menu">
