--- a/src/components/snippets/Menu.astro
+++ b/src/components/snippets/Menu.astro
@@ -7,7 +7,7 @@ import { t } from "i18next";
   <li><a href="#contact">{t("header.contact")}</a></li>
 </ul>
 
-<style>
+<style is:global>
   nav.desktop-menu ul[role="menu"] {
     display: flex;
     gap: var(--gutter);
