--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -52,15 +52,16 @@ import logo from '../assets/img/branding/invitaly_logo--small.svg'
     width: min(100vw, 500px);
     padding: var(--gutter-l);
     background-color: salmon;
+    transform: translateX(100%);
     translate: 100%;
 
     &.--is-visible {
+      transform: translateX(0);
       translate: 0;
     }
   }
   div.overlay {
       opacity: 0;
-      translate: 100%;
       content: "";
       position: fixed;
       top: 0;
@@ -68,9 +69,12 @@ import logo from '../assets/img/branding/invitaly_logo--small.svg'
       width: 100%;
       height: 100%;
       background-color: rgba(0,0,0,0.7);
+      transform: translateX(100%);
+      translate: 100%;
 
     &.--is-visible {
       opacity: 1;
+      transform: translateX(0);
       translate: 0;
     }
   }
