--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,13 +1,13 @@
 ---
 import "../../assets/css/reset.css";
 import "../../assets/css/global.css";
-import i18next, { t, changeLanguage } from "i18next";
-import { Trans, LanguageSelector } from "astro-i18next/components";
+import i18next, { changeLanguage } from "i18next";
+import { LanguageSelector } from "astro-i18next/components";
 import Head from "../../components/Head.astro";
 import Header from "../../components/Header.astro";
 import Hero from "../../components/Hero.astro";
 import Footer from "../../components/Footer.astro";
-import DailyMenu from "../../components/DailyMenu.astro";
+import DailyMenu from "../../components/snippets/DailyMenu.astro";
 
 changeLanguage("en");
 ---
