Started "about" section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,13 +3,15 @@ import Reservation from "./snippets/Reservation.astro";
 import Address from "./snippets/Address.astro";
 ---
 
-<footer class="grid container">
+<footer class="grid" id="footer">
   <Reservation visible />
   <Address />
 </footer>
 
 <style>
-  footer.grid {
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 30ch), 1fr));
+  @media (width < 1025px) {
+    footer.grid {
+      grid-template-columns: repeat(auto-fit, minmax(min(100%, 30ch), 1fr));
+    }
   }
 </style>
