--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,9 +1,9 @@
 :root {
-  --container: 90rem;
+  --container: 95rem;
   --gutter: 1.5rem;
   --gutter-l: 3rem;
   --font: 'Merriweather Sans', sans-serif;
-  --easing: cubic-bezier(0.83, 0, 0.17, 1); /*easeInOutQuint*/
+  --easing: cubic-bezier(0.76, 0, 0.24, 1); /*easeInOutQuart*/
   /* --mobile: 375px;
   --tablet: 768px;
   --desktop: 1024px;
@@ -19,10 +19,24 @@
   scroll-behavior: smooth;
 }
 body {
+  max-width: var(--container);
+  margin: 0 auto;
   font-family: var(--font);
   line-height: 2;
   overflow-x: hidden;
   padding: var(--gutter) clamp(1rem, 5%, 3rem);
+}
+section, footer {
+  padding-block: var(--gutter-l);
+}
+h2 {
+  font-size: clamp(2rem, 4vw, 4rem);
+  line-height: 1.3;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+p {
+  margin-bottom: 1rem;
 }
 a {
   text-decoration: none;
@@ -47,7 +61,7 @@ address {
     grid-template-columns: repeat(12, 1fr);
   }
 }
-.container {
+/* .container { 
   max-width: var(--container);
   margin: 0 auto;
-}
+} */
