--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,27 +1,29 @@
 ---
 import { t } from "i18next";
-import Menu from "./snippets/Menu.astro";
+import TopNav from "./snippets/TopNav.astro";
+import LanguageSelector from "./snippets/LanguageSelector.astro";
+
+const { pathname } = Astro.url;
 
 import logo from '../assets/img/branding/invitaly_logo--small.svg'
-import LanguageSelector from "./snippets/LanguageSelector.astro";
 ---
 
-<header class="container">
+<header>
   <nav class="desktop-menu">
-    <Menu />
+    <TopNav />
   </nav>
-  <a class="logo" href="/">
-    <img src={logo} alt="Invitaly logo" width="100">
+  <a class="logo" href={pathname}>
+    <img src={logo} alt="Invitaly logo" width="100" height="54">
   </a>
   <div class="overlay"></div>
   <nav class="mobile-menu">
-    <section class="menu-container">
-      <Menu />
-      <p>Iste et, velit explicabo nam incidunt porro nobis autem voluptates repellendus error quaerat asperiores, in ratione perspiciatis. Deleniti maxime repudiandae ipsam totam est enim aut, amet animi laboriosam eos eaque. Quod cumque dolores aperiam enim maxime doloribus magnam labore. Totam delectus tempora, accusamus veritatis repudiandae ex quo. Esse necessitatibus voluptatem repudiandae nihil quibusdam obcaecati, soluta aperiam ipsa. Tempore esse optio aliquam sint debitis? Sequi?</p>
-    </section>
+    <!-- <section class="menu-container"> -->
+      <!-- <TopNav /> -->
+      <!-- <p>Iste et, velit explicabo nam incidunt porro nobis autem voluptates repellendus error quaerat asperiores, in ratione perspiciatis. Deleniti maxime repudiandae ipsam totam est enim aut, amet animi laboriosam eos eaque. Quod cumque dolores aperiam enim maxime doloribus magnam labore. Totam delectus tempora, accusamus veritatis repudiandae ex quo. Esse necessitatibus voluptatem repudiandae nihil quibusdam obcaecati, soluta aperiam ipsa. Tempore esse optio aliquam sint debitis? Sequi?</p> -->
+    <!-- </section> -->
     <!-- <a href="#" class="order">{t("header.order")}</a> -->
     <LanguageSelector />
-    <div class="burger">Menu</div>
+    <!-- <div class="burger">Menu</div> -->
   </nav>
 </header>
 
