--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import i18next, { changeLanguage } from "i18next";
 import Head from "../components/Head.astro";
 import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
+import About from "../components/About.astro";
 import Footer from "../components/Footer.astro";
 
 changeLanguage("cs");
@@ -16,6 +17,7 @@ changeLanguage("cs");
 	<body>
 		<Header />
 		<Hero />
+		<!-- <About /> -->
 		<Footer />
 	</body>
 </html>
