--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,28 +1,93 @@
 ---
-import img1 from "../assets/img/hero/invitaly_vezenska_20.jpg"
-import img2 from "../assets/img/hero/invitaly_vezenska_16.jpg"
+import img1 from "../assets/img/body/20221027vezenska_piatti_12.jpg"
+import img2 from "../assets/img/body/20221027vezenska_piatti_2_square.jpg"
+import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
 ---
 
 <section class="grid" id="about">
   <h2>Bringing the best traditions</h2>
-  <div>
+  <div class="header">
     <p>Illo voluptatibus laboriosam qui totam quasi velit assumenda sint mollitia dolore odio quidem, ut repudiandae cumque. Ipsum laudantium quia adipisci fugit ex praesentium nihil eveniet? Esse doloremque animi in facere.</p>
     <p>Cum facere tempora dolor nam! Dicta non suscipit cumque rerum maiores ipsa accusantium esse error, soluta pariatur cum repudiandae at magni ducimus aliquam temporibus repellendus minima ex fugit, neque tempora.</p>
   </div>
-  <img class="img1" src={img1} alt="Invitaly">
-  <img class="img2" src={img2} alt="Invitaly">
+  <div class="img1"><img class="observe" src={img1} alt="Invitaly"></div>
+  <div class="img2"><img class="observe" src={img2} alt="Invitaly"></div>
+  <div class="img3"><img class="observe" src={img3} alt="Invitaly"></div>
 </section>
 
 <style>
-    h2, div, .img1, .img2 {
+  .grid {
+    gap: var(--gutter-l);
+  }
+    h2, div {
       grid-column: span 12;
+  }
+  /* animations */
+  div {
+    overflow: hidden;
+  }
+  img {
+    --initial-scale: scale3d(1, 1, 1);
+    --final-scale: scale3d(1.1, 1.1, 1.1);
+    animation-fill-mode: forwards;
+
+    &.animate {
+      animation-duration: 1.6s;
+      animation-timing-function: var(--easing);
+    }
+  }
+
+  .img1 img {
+    clip-path: inset(0 99% 0 0);
+
+    &.animate {
+      animation-name: toRight;
+    }
+  }
+  .img2 img, .img3 img {
+    transform: var(--initial-scale);
+
+    &.animate {
+      animation-name: zoomIn;
+    }
+  }
+  .img3 img{
+    animation-delay: 0.6s;
+  }
+
+  @keyframes toRight {
+    0% {
+      clip-path: inset(0 100% 0 0);
+    }
+    100% {
+      clip-path: inset(0);
+    }
+  }
+  @keyframes toLeft {
+    0% {
+      clip-path: inset(0 0 0 100%);
+    }
+    100% {
+      clip-path: inset(0);
+    }
+  }
+  @keyframes zoomIn {
+    0% {
+      transform: var(--initial-scale);
+    }
+    100% {
+      transform: var(--final-scale);
+    }
   }
 
   @media (width >= 1024px) {
+    .grid {
+      grid-template-rows: 0.25fr 1fr 1fr;
+    }
     h2 {
       grid-column: 2 / 10;
     }
-    div {
+    .header {
       grid-column: 2 / 6;
       grid-row: 2 / 3;
     }
@@ -35,9 +100,44 @@ import img2 from "../assets/img/hero/invitaly_vezenska_16.jpg"
     .img2 {
       grid-column: 2 / 6;
       grid-row: 3 / 4;
-      object-fit: cover;
-      height: 100%;
+
+      & img {
+        object-fit: cover;
+        height: 100%;
+      }
+    }
+    .img3 {
+      grid-column: 2 / 12;
     }
   }
 
 </style>
+
+<script>
+
+  const sections = document.querySelectorAll('.observe');
+
+  const options = {
+    threshold: 0
+  };
+
+  const observer = new IntersectionObserver(function(entries, observer) {
+    entries.forEach(entry => {
+
+      if (!entry.isIntersecting) { // if not intersecting, do nothing
+        return;
+      }
+
+      console.log(entry.target);
+
+      entry.target.classList.toggle('animate');
+
+      observer.unobserve(entry.target); // stop obsserving after doing it once
+    })
+  }, options);
+
+  sections.forEach(section =>{
+    observer.observe(section);
+  });
+
+</script>
