making partss visible

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,10 +17,10 @@ import logo from '../assets/img/branding/invitaly_logo--small.svg'
   </a>
   <div class="overlay"></div>
   <nav class="mobile-menu">
-    <!-- <section class="menu-container"> -->
-      <!-- <TopNav /> -->
-      <!-- <p>Iste et, velit explicabo nam incidunt porro nobis autem voluptates repellendus error quaerat asperiores, in ratione perspiciatis. Deleniti maxime repudiandae ipsam totam est enim aut, amet animi laboriosam eos eaque. Quod cumque dolores aperiam enim maxime doloribus magnam labore. Totam delectus tempora, accusamus veritatis repudiandae ex quo. Esse necessitatibus voluptatem repudiandae nihil quibusdam obcaecati, soluta aperiam ipsa. Tempore esse optio aliquam sint debitis? Sequi?</p> -->
-    <!-- </section> -->
+    <section class="menu-container">
+      <TopNav />
+      <p>Iste et, velit explicabo nam incidunt porro nobis autem voluptates repellendus error quaerat asperiores, in ratione perspiciatis. Deleniti maxime repudiandae ipsam totam est enim aut, amet animi laboriosam eos eaque. Quod cumque dolores aperiam enim maxime doloribus magnam labore. Totam delectus tempora, accusamus veritatis repudiandae ex quo. Esse necessitatibus voluptatem repudiandae nihil quibusdam obcaecati, soluta aperiam ipsa. Tempore esse optio aliquam sint debitis? Sequi?</p>
+    </section>
     <!-- <a href="#" class="order">{t("header.order")}</a> -->
     <LanguageSelector />
     <!-- <div class="burger">Menu</div> -->
