--- a/src/components/snippets/TopNav.astro
+++ b/src/components/snippets/TopNav.astro
@@ -2,8 +2,8 @@
 import { t } from "i18next";
 ---
 <ul role="menu">
-  <!-- <li><a href="#about">{t("header.about")}</a></li> -->
-  <!-- <li><a href="#menu">{t("header.menu")}</a></li> -->
+  <li><a href="#about">{t("header.about")}</a></li>
+  <li><a href="#menu">{t("header.menu")}</a></li>
   <li><a href="#footer">{t("header.contact")}</a></li>
 </ul>
 
