--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -5,6 +5,7 @@ import i18next, { changeLanguage } from "i18next";
 import Head from "../../components/Head.astro";
 import Header from "../../components/Header.astro";
 import Hero from "../../components/Hero.astro";
+import About from "../../components/About.astro";
 import Footer from "../../components/Footer.astro";
 
 changeLanguage("en");
@@ -15,6 +16,7 @@ changeLanguage("en");
 	<body>
 		<Header />
 		<Hero />
+		<About />
 		<Footer />
 	</body>
 </html>
