--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -21,16 +21,16 @@ import favicon16 from '../assets/img/favicon/favicon-16x16.png'
   <HeadHrefLangs />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link
     rel="preload"
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700;800&display=swap"
     as="style"
     onload="this.onload=null;this.rel='stylesheet'"
   />
   <noscript>
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
       type="text/css"
     />
