--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -68,6 +68,7 @@ const {
     line-height: 1.3;
     text-transform: uppercase;
     margin-bottom: var(--gutter);
+    font-weight: 800;
   }
   /* animations */
   h1, p {
