--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import Head from "../components/Head.astro";
 import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
+import DailyMenu from "../components/DailyMenu.astro";
+import Menu from "../components/Menu.astro";
 import Footer from "../components/Footer.astro";
 
 changeLanguage("cs");
@@ -18,6 +20,8 @@ changeLanguage("cs");
 		<Header />
 		<Hero />
 		<About />
+		<DailyMenu />
+		<Menu />
 		<Footer />
 	</body>
 </html>
