--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const { pathname } = Astro.url;
 import logo from '../assets/img/branding/invitaly_logo--small.svg'
 ---
 
-<header>
+<header class="container">
   <nav class="desktop-menu">
     <TopNav />
   </nav>
@@ -23,7 +23,7 @@ import logo from '../assets/img/branding/invitaly_logo--small.svg'
     </section>
     <!-- <a href="#" class="order">{t("header.order")}</a> -->
     <LanguageSelector />
-    <!-- <div class="burger">Menu</div> -->
+    <div class="burger">Menu</div>
   </nav>
 </header>
 
