--- a/src/components/snippets/Address.astro
+++ b/src/components/snippets/Address.astro
@@ -3,7 +3,7 @@ import { t } from "i18next";
 import instagram from '../../assets/img/icon/instagram--color.svg';
 ---
 <section>
-  <h3>Invitaly EnoTrattoria</h3>
+  <h3 class="small">Invitaly EnoTrattoria</h3>
   <address>
     <ul>
       <li>Vězeňská 4, 110 00 Praha, Czechia<br>
@@ -23,11 +23,11 @@ import instagram from '../../assets/img/icon/instagram--color.svg';
 </section>
 
 <style>
-  @media (width >= 1024px) {
+  /* @media (width >= 1024px) {
     section {
       grid-column: 7 / 11;
     }
-  }
+  } */
   .social-link {
     display: flex;
     align-items: center;
