--- a/src/components/snippets/TopNav.astro
+++ b/src/components/snippets/TopNav.astro
@@ -13,3 +13,8 @@ import { t } from "i18next";
     gap: var(--gutter);
   }
 </style>
+<style>
+  a {
+    text-transform: uppercase;
+  }
+</style>
