--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,10 +1,13 @@
 :root {
-  --container: 95rem;
+  --container: 85rem;
   --gutter: 1.5rem;
   --gutter-l: 3rem;
-  --font: 'Sarabun', sans-serif;
+  --gutter-xl: 6rem;
+  --font: 'Sarabun', sans-serif; /*not used*/
+  --font: 'Quicksand', sans-serif;
   --easing: cubic-bezier(0.76, 0, 0.24, 1); /*easeInOutQuart*/
-  --black-1: hsl(0deg 0% 0% / 75%)
+  --c-primary: hsl(120 39% 25%);
+  --c-black: hsl(0 0% 0% / 75%);
   /* --mobile: 375px;
   --tablet: 768px;
   --desktop: 1024px;
@@ -14,29 +17,40 @@
 @media (width < 769px) {
   :root {
     --gutter-l: var(--gutter);
+    --gutter-xl: var(--gutter);
   }
+}
+@font-face {
+  font-family: 'Nlgstr';
+  font-style: normal;
+  font-weight: normal;
+  src:  url('../fonts/analogist.woff') format('woff');
+  font-display: swap;
 }
 * {
   scroll-behavior: smooth;
 }
 body {
-  max-width: var(--container);
-  margin: 0 auto;
   line-height: 2;
   overflow-x: hidden;
-  padding: var(--gutter) clamp(1rem, 5%, 3rem);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-family: var(--font);
-  color: var(--black-1);
+  color: var(--c-black);
 }
 section, footer {
   padding-block: var(--gutter-l);
 }
+h1, h2, h3 {
+  font-family: 'Nlgstr', serif;
+  font-weight: normal;
+  color: var(--c-primary);
+  line-height: 1.3;
+}
 h2 {
   font-size: clamp(2rem, 4vw, 4rem);
-  font-weight: 800;
-  line-height: 1.3;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
+}
+h3.small {
+  letter-spacing: 1px;
 }
 p {
   margin-bottom: 1rem;
@@ -64,7 +78,8 @@ address {
     grid-template-columns: repeat(12, 1fr);
   }
 }
-/* .container { 
+.container { 
   max-width: var(--container);
   margin: 0 auto;
-} */
+  padding: var(--gutter-l)
+}
