--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ import img2 from "../assets/img/body/20221027vezenska_piatti_2_square.jpg"
 import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
 ---
 
-<section class="grid" id="about">
+<section class="grid container" id="about">
   <h2>Bringing the best traditions</h2>
   <div class="header">
     <p>Illo voluptatibus laboriosam qui totam quasi velit assumenda sint mollitia dolore odio quidem, ut repudiandae cumque. Ipsum laudantium quia adipisci fugit ex praesentium nihil eveniet? Esse doloremque animi in facere.</p>
@@ -78,24 +78,18 @@ import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
   }
 
   @media (width >= 1024px) {
-    .grid {
-      grid-template-rows: 0.25fr 1fr 1fr;
-    }
-    h2 {
-      grid-column: 2 / 10;
-    }
     .header {
-      grid-column: 2 / 6;
+      grid-column: 1 / 6;
       grid-row: 2 / 3;
     }
     .img1 {
-      grid-column: 6 / 12;
+      grid-column: 6 / 13;
       grid-row: 2 / 4;
       aspect-ratio: 3 / 4;
       object-fit: cover;
     }
     .img2 {
-      grid-column: 2 / 6;
+      grid-column: 1 / 6;
       grid-row: 3 / 4;
 
       & img {
@@ -104,7 +98,7 @@ import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
       }
     }
     .img3 {
-      grid-column: 2 / 12;
+      grid-column: 1 / 13;
     }
   }
 
