--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,92 +19,59 @@ const {
   } = Astro.props;
 ---
 
-<section class="hero grid">
+<section style="padding-top: 0;">
+    <h1>{t("hero.h1")}</h1>
+    <!-- <p>{t("hero.p")}</p> -->
   <div>
     <RandomImage client:load images={images} className width={width} height={height} alt={alt} />
-  </div>
-  <div class="header">
-    <h1>{t("hero.h1")}</h1>
-    <p>{t("hero.p")}</p>
   </div>
 </section>
 
 <style>
-  .hero {
-    padding-top: var(--gutter);
-  }
   div:has(img) {
-    grid-column: 1 / 13;
-    grid-row: 1 / 3;
-    position: relative;
     /* animations */
+    animation-fill-mode: backwards;
     animation-duration: 1.6s;
     animation-timing-function: var(--easing);
-    animation-delay: 0s;
-    animation-name: heroClip;
-    
-    &::after {
-      content:'';
-      position:absolute;
-      left:0; top:0;
-      width:100%; height:100%;
-      display:block;
-      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.4) 100%);
-    }
+    animation-delay: 0.1s;
+    animation-name: toLeft;
   }
   img {
     object-fit: cover;
   }
-  .header {
-    grid-column: 3 / 11;
-    grid-row: 2 / 3;
-    width: 100%;
-    padding: var(--gutter);
-    text-align: center;
-    color: white;
-  }
   h1 {
-    font-size: clamp(2rem, 4vw, 4rem);
-    line-height: 1.3;
-    text-transform: uppercase;
-    margin-bottom: var(--gutter);
-    font-weight: 800;
-  }
-  /* animations */
-  h1, p {
+    font-size: clamp(2rem, 4vw, 5rem);
+    text-align: center;
+    max-width: 50rem;
+    padding: var(--gutter-l);
+    margin: var(--gutter) auto var(--gutter-xl);
+    /* animations */
     opacity: 0;
     animation-fill-mode: forwards;
     animation-duration: 1.6s;
     animation-timing-function: var(--easing);
-    animation-delay: 1s;
     animation-name: heroHeader;
   }
-  p {
-    animation-delay: 1.1s;
-  }
   
+  @media (width < 769px) {
+    h1 {
+      margin: 0 auto var(--gutter);
+    }
+  }
   @media (width < 1025px) {
     img {
-      max-height: 50vh;
-    }
-    .header {
-      grid-column: 1 / 13;
-      grid-row: 2 / 3;
+      max-height: 70vh;
     }
   }
-  @media (width < 769px) {
-    p {
-      display: none;
-    }
-  }
-  @keyframes heroClip {
+
+  /* @keyframes heroClip {
     0% {
       clip-path: inset(0 100% 0 100%);
     }
     100% {
       clip-path: inset(0);
     }
-  }
+  } */
   @keyframes heroHeader {
     0% {
       transform: translateY(50%);
@@ -115,6 +82,17 @@ const {
       opacity: 1;
     }
   }
+  @keyframes toLeft {
+    0% {
+      clip-path: inset(0 0 0 100%);
+      opacity: 0;
+    }
+    100% {
+      clip-path: inset(0);
+      opacity: 1;
+    }
+  }
+
   </style>
 
   <!-- <script src="src/assets/js/loco.js" type="module"/> -->
